[gd_scene format=3 uid="uid://bc60877h41f2h"]

[ext_resource type="Script" uid="uid://cpby0b3kdg4xf" path="res://script/orc.gd" id="1_e0egi"]
[ext_resource type="Texture2D" uid="uid://1dqc47o4x6sy" path="res://sprites/8 - Orc/Walking_&_Blink_(64 x 32).png" id="1_gn806"]
[ext_resource type="Texture2D" uid="uid://bb5bong8xro3w" path="res://sprites/8 - Orc/Spear_Jab_(64 x 32).png" id="2_l1uow"]
[ext_resource type="Texture2D" uid="uid://b7hv6k40xpkni" path="res://sprites/8 - Orc/Hurt_(64 x 32).png" id="3_shsjq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vcp00"]
atlas = ExtResource("2_l1uow")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8pof"]
atlas = ExtResource("2_l1uow")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m1qd"]
atlas = ExtResource("2_l1uow")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_poiap"]
atlas = ExtResource("2_l1uow")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55k24"]
atlas = ExtResource("2_l1uow")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec3po"]
atlas = ExtResource("2_l1uow")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq5yx"]
atlas = ExtResource("3_shsjq")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1uow"]
atlas = ExtResource("1_gn806")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shsjq"]
atlas = ExtResource("1_gn806")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y26yx"]
atlas = ExtResource("1_gn806")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgpvu"]
atlas = ExtResource("1_gn806")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3bfk"]
atlas = ExtResource("1_gn806")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tap"]
atlas = ExtResource("1_gn806")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fqjv"]
atlas = ExtResource("1_gn806")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ngre"]
atlas = ExtResource("1_gn806")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsymx"]
atlas = ExtResource("1_gn806")
region = Rect2(512, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cjyv"]
atlas = ExtResource("1_gn806")
region = Rect2(576, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikfie"]
atlas = ExtResource("1_gn806")
region = Rect2(640, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkrvw"]
atlas = ExtResource("1_gn806")
region = Rect2(704, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vcp00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcp00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8pof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m1qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poiap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55k24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec3po")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq5yx")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1uow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shsjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y26yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgpvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3bfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fqjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ngre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsymx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cjyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikfie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkrvw")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8pof"]
radius = 9.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m1qd"]
size = Vector2(19, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1uow"]
size = Vector2(14, 2.5)

[node name="orc" type="CharacterBody2D" unique_id=1000703559]
collision_layer = 4
script = ExtResource("1_e0egi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=124733084]
sprite_frames = SubResource("SpriteFrames_vcp00")
animation = &"attack"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1807252171]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_p8pof")

[node name="hitbox" type="Area2D" parent="." unique_id=586183179 groups=["enemies"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" unique_id=1021998353]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2m1qd")
debug_color = Color(0.9681173, 0, 0.4729858, 0.41960785)

[node name="wall_detector" type="RayCast2D" parent="." unique_id=578117583]
position = Vector2(-2, 14)
rotation = 3.1764991
target_position = Vector2(13, 0)

[node name="ground_detector" type="RayCast2D" parent="." unique_id=1635204060]
position = Vector2(-10, -1)
target_position = Vector2(0, 19)

[node name="player_detector" type="RayCast2D" parent="." unique_id=468982623]
position = Vector2(-2, 15)
rotation = 3.1764991
target_position = Vector2(21.057007, 1.2658949)
collision_mask = 2

[node name="hitbox_spear" type="Area2D" parent="." unique_id=1347842618 groups=["letal_area"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_spear" unique_id=1642524882 groups=["letal_area"]]
position = Vector2(-13, 10.25)
shape = SubResource("RectangleShape2D_l1uow")
debug_color = Color(1.2319511, 0, 0.5621085, 1)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="hitbox_spear" to="." method="_on_hitbox_spear_body_entered"]
